--- a/devtools/default.css
+++ b/devtools/default.css
@@ -97,7 +97,6 @@ h3 {
 	 white-space: nowrap;
 	 text-overflow:ellipsis;
 	 overflow: hidden;
-	 max-width:700px;
 	}	
 	.error {
 	 color: red;
@@ -219,7 +218,14 @@ td {
 	padding-left: 1px;
 	padding-right: 1px;
 }
-@media all and ( max-width: 1200px ) {
+
+@media all and ( max-width: 1920px ) {
+	.transformedResults td.urlData {
+		max-width:1000px;
+	}
+}
+
+@media all and ( max-width: 1600px ) {
 	h1 {
 		 margin-bottom: 12px;
 		 text-align: center;
@@ -247,24 +253,62 @@ td {
 		vertical-align: middle;
 		background-color: #2C2C2C;
 	}
+	.transformedResults td.urlData {
+		max-width:700px;
+	}
 }
 
-@media all and ( max-width: 900px ) {
+@media all and ( max-width: 1200px ) {
+	h1 {
+		 text-align: center;
+		 font-size: 16px;
+		 font-weight: 400;
+		 color: #999797;
+		 min-height: 33px;
+	}
+	[class*="col-"] {
+		padding: 15px 10px;
+		vertical-align: middle;
+	}
+	h3 {
+		 font-size: 15px;
+		 font-weight: 600;
+		 color: #656565;
+		 text-align: center;
+	}
+	table {
+		font-size: 12px;
+	}
+	.col-4-box {
+		min-height: 180px;
+		overflow: scroll;
+	}
+
 	.transformedResults td.urlData {
-	 text-align: left;
-	 white-space: nowrap;
-	 text-overflow:ellipsis;
-	 overflow: hidden;
 	 max-width:300px;
 	}
 }
 
-@media all and ( max-width: 600px ) {
+@media all and ( max-width: 720px ) {
+	h1 {
+		 margin-bottom: 17px;
+	}
+	[class*="col-"] {
+		margin-right: 0px;
+		float: left;
+		border: 1px solid #030202;
+		padding: 50px 25px;
+		text-align: center;
+		display: table-cell;
+		vertical-align: middle;
+		background-color: #2C2C2C;
+	}
+	.col-4-box {
+		min-height: 180px;
+		overflow: scroll;
+	}
+
 	.transformedResults td.urlData {
-	 text-align: left;
-	 white-space: nowrap;
-	 text-overflow:ellipsis;
-	 overflow: hidden;
 	 max-width:200px;
 	}
 }
