Split out IM reporting from common reporting.

--- a/devtools/default.css
+++ b/devtools/default.css
@@ -119,7 +119,7 @@ h3 {
 	text-decoration: underline;
 	min-width: 300px;
 }
-.imageCompareTableHover {
+.urlInfoHover {
 	background-color: black;
 }
 .imageToggleBoxMessage {
