--- a/devtools/default.css
+++ b/devtools/default.css
@@ -4,7 +4,7 @@ colour pallette:
 656565
 2C2C2C
 000000
-030202		
+030202
 */
 
 *,
@@ -45,7 +45,7 @@ h3 {
 	margin-bottom: 0;
 }
 [class*="col-"] {
-}		 
+}
 [class*="col-"] {
 	margin-right: 0px;
 	float: left;
@@ -119,7 +119,7 @@ h3 {
 	text-decoration: underline;
 	min-width: 300px;
 }
-.urlInfoHover {
+.urlInfo:hover {
 	background-color: black;
 }
 .imageToggleBoxMessage {
@@ -170,7 +170,7 @@ a:visited {
 	color: white;
 	background-color: black;
 }
-.toggleOriginalImage 	{ 
+.toggleOriginalImage 	{
 	position: absolute;
 	border: 1px solid #999797;
 	}
@@ -181,9 +181,9 @@ a:visited {
 .imageToggleBox {
 	margin-bottom: 20px;
 }
-.imageToggleBox:hover { 
+.imageToggleBox:hover {
 	cursor: pointer;
-	}  
+	}
 #ajaxloader {
 	width: 60px;
 	height: 60px;
@@ -198,11 +198,11 @@ a:visited {
 	-webkit-animation-duration: 1.0s;
 	-webkit-animation-iteration-count:infinite;
 	-webkit-animation-name:loader;
-	-webkit-animation-timing-function: linear;			
+	-webkit-animation-timing-function: linear;
 }
 @-webkit-keyframes loader {
-	0%{ -webkit-transform:  rotate(0deg);}     
-	100%{ -webkit-transform:  rotate(360deg)  ;} 
+	0%{ -webkit-transform:  rotate(0deg);}
+	100%{ -webkit-transform:  rotate(360deg)  ;}
 }
 .row {
 	display: flex;
@@ -212,7 +212,7 @@ a:visited {
 }
 .details {
 	overflow: visible;
-}	
+}
 td {
 	padding-bottom: 2px;
 	padding-left: 1px;
