--- a/devtools/default.css
+++ b/devtools/default.css
@@ -184,7 +184,7 @@ a:visited {
 .imageToggleBox:hover {
 	cursor: pointer;
 	}
-#ajaxloader {
+.ajaxLoader {
 	width: 60px;
 	height: 60px;
 	border: 1px solid #FFFFFF;
