--- a/devtools/default.css
+++ b/devtools/default.css
@@ -59,6 +59,11 @@ h3 {
 [class*="col-"]:last-child {
 	margin-right: 0;
 }
+.col-1-5-box {
+	width: 20%;
+	max-height: 188px;
+	overflow: hidden;
+}
 .col-1-4-box {
 	width: 25%;
 	max-height: 188px;
