--- a/devtools/default.css
+++ b/devtools/default.css
@@ -226,8 +226,9 @@ a:visited {
 }
 td {
 	padding-bottom: 2px;
-	padding-left: 1px;
-	padding-right: 1px;
+	padding-left: 3px;
+	padding-right: 3px;
+	white-space:nowrap;
 }
 
 .subHeaderInfo {
