--- a/devtools/default.css
+++ b/devtools/default.css
@@ -36,9 +36,9 @@ body {
 	font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 h1 {
-	margin-bottom: 12px;
+	margin: 12px 0px;
 	text-align: center;
-	font-size: 30px;
+	font-size: 26px;
 	font-weight: 400;
 	color: #999797;
 }
@@ -55,6 +55,9 @@ h4 {
 	color: #656565;
 	text-align: center;
 	margin: 10px;
+}
+.container {
+	margin-top: 100px;
 }
 [class*="row-"] {
 	margin-bottom: 20px;
@@ -81,8 +84,7 @@ h4 {
 	min-height: 100px;
 	max-height: 100px;
 	overflow: hidden;
-	padding: 1px;
-	padding-bottom: 10px;
+	padding: 5px;
 }
 .col-1-2-box {
 	width: 50%;
@@ -94,10 +96,6 @@ h4 {
 	float: none;
 	overflow: auto;
 }
-#detailsBox1Title{
-	margin-top: 100px;
-}
-
 .col-full-box-nonImage {
 	margin-top: auto;
 	width: 100%;
@@ -107,12 +105,11 @@ h4 {
 	overflow: auto;
 }
 .col-image-box {
-	margin-top: 100px;
 	width: 100%;
 	text-align: center;
 	display: block;
 	float: none;
-	padding: 0px;
+	padding: 15px;
 }
 [class*='detailed-results'] {
 	margin: 0px auto;
@@ -273,7 +270,7 @@ a:visited {
 	left: 0;
 	z-index: 999;
 	width: 100%;
-	height: 100px;
+	height: 110px;
 }
 .details {
 	overflow: visible;
@@ -302,7 +299,7 @@ td {
 		 font-size: 20px;
 		 font-weight: 400;
 		 color: #999797;
-		 min-height: 48px;
+		 min-height: 30px;
 	}
 	h3 {
 		 font-size: 17px;
@@ -325,11 +322,19 @@ td {
 		margin-right: 0px;
 		float: left;
 		border: 1px solid #030202;
-		padding: 0px 12px;
+		padding: 20px 12px;
 		text-align: center;
 		display: table-cell;
 		vertical-align: middle;
 		background-color: #2C2C2C;
+	}
+	.container {
+		margin-top: 110px;
+	}
+	.col-1-4-box {
+		padding: 15px 10px;
+		min-height: 110px;
+		max-height: 110px;
 	}
 	.detailed-results td.urlData {
 		max-width:700px;
@@ -356,7 +361,7 @@ td {
 		 margin: 10px;
 	}
 	h4 {
-		font-size: 17px;
+		font-size: 16px;
 		font-weight: 800;
 		color: #656565;
 		text-align: center;
@@ -365,11 +370,18 @@ td {
 	table {
 		font-size: 12px;
 	}
+	.container {
+		margin-top: 120px;
+	}
+	.col-1-4-box {
+		padding: 10px 5px;
+		min-height: 120px;
+		max-height: 120px;
+	}
 	.col-4-box {
 		min-height: 150px;
 		overflow: scroll;
 	}
-
 	.detailed-results td.urlData {
 	    max-width:300px;
 	}
@@ -378,6 +390,9 @@ td {
 @media all and ( max-width: 720px ) {
 	h1 {
 		 margin-bottom: 17px;
+	}
+	h4 {
+		font-size: 15px;
 	}
 	[class*="col-"] {
 		margin-right: 0px;
@@ -389,13 +404,20 @@ td {
 		vertical-align: middle;
 		background-color: #2C2C2C;
 	}
+	.container {
+		margin-top: 150px;
+	}
+	.col-1-4-box {
+		padding: 5px;
+		min-height: 150px;
+		max-height: 150px;
+	}
 	.col-4-box {
 		min-height: 150px;
 		overflow: scroll;
 	}
-
 	.detailed-results td.urlData {
-	 max-width:200px;
+	    max-width:200px;
 	}
 }
 
