--- a/devtools/default.css
+++ b/devtools/default.css
@@ -79,6 +79,15 @@ h4 {
 [class*="col-"]:last-child {
 	margin-right: 0;
 }
+
+.col-1-5-box {
+	width: 20%;
+	min-height: 125px;
+	max-height: 125px;
+	overflow: hidden;
+	padding: 5px;
+}
+
 .col-1-4-box {
 	width: 25%;
 	min-height: 100px;
