--- a/devtools/default.css
+++ b/devtools/default.css
@@ -1,10 +1,10 @@
 /*
 colour pallette:
 999797
-656565
-2C2C2C
+ffffff
+2e2f30
 000000
-030202
+202122
 */
 
 *,
@@ -32,7 +32,7 @@ body {
 	margin: 0;
 	background-color: #222222;
 	font-size: 20px;
-	color: white;
+	color: #ffffff;
 	font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 h1 {
@@ -45,19 +45,19 @@ h1 {
 h3 {
 	font-size: 20px;
 	font-weight: 600;
-	color: #656565;
+	color: #ffffff;
 	text-align: center;
 	margin: 10px;
 }
 h4 {
 	font-size: 17px;
-	font-weight: 800;
-	color: #656565;
+
+	color: #ffffff;
 	text-align: center;
 	margin: 10px;
 }
 .container {
-	margin-top: 100px;
+	margin-top: 125px;
 }
 [class*="row-"] {
 	margin-bottom: 20px;
@@ -69,12 +69,12 @@ h4 {
 	margin-top: 0px;
 	margin-right: 0px;
 	float: left;
-	border: 1px solid #030202;
+	border: 1px solid #202122;
 	padding: 12px 12px;
 	text-align: center;
 	display: table-cell;
 	vertical-align: middle;
-	background-color: #2C2C2C;
+	background-color: #2e2f30;
 }
 [class*="col-"]:last-child {
 	margin-right: 0;
@@ -90,13 +90,17 @@ h4 {
 
 .col-1-4-box {
 	width: 25%;
-	min-height: 100px;
-	max-height: 100px;
+	min-height: 125px;
+	max-height: 125px;
 	overflow: hidden;
 	padding: 5px;
 }
 .col-1-2-box {
 	width: 50%;
+	min-height: 125px;
+	max-height: 125px;
+	overflow: hidden;
+	padding: 5px;
 }
 .col-full-box {
 	width: 100%;
@@ -122,7 +126,7 @@ h4 {
 }
 [class*='detailed-results'] {
 	margin: 0px auto;
-	color: #656565;
+	color: #ffffff;
 }
 [class*='detailed-results'] th {
 	padding: 10px;
@@ -150,7 +154,7 @@ h4 {
 	color: #FFDE00;
 }
 .success {
-	color: green;
+	color: #87c224;
 }
 .imageCompareTable {
 	margin: 0px auto;
@@ -180,13 +184,13 @@ h4 {
 	margin-bottom: 20px;
 }
 a:link {
-	color: #656565;
+	color: #ffffff;
 }
 a:hover {
 	color: white;
 }
 a:visited {
-	color: #656565;
+	color: #ffffff;
 }
 .piezConfigMessageHeader {
 	font-size: 25px;
@@ -209,8 +213,8 @@ a:visited {
 	padding:10px;
 }
 .unselectedImage {
-	color: #656565;
-	border: solid 4px #2C2C2C;
+	color: #ffffff;
+	border: solid 4px #2e2f30;
 	padding:10px;
 }
 .selectedImage:hover {
@@ -313,40 +317,66 @@ td {
 	h3 {
 		 font-size: 17px;
 		 font-weight: 600;
-		 color: #656565;
+		 color: #ffffff;
 		 text-align: center;
 		 margin: 10px;
 	}
 	h4 {
-		font-size: 17px;
-		font-weight: 800;
-		color: #656565;
+		font-size: 14px;
+
+		color: #ffffff;
 		text-align: center;
 		margin: 10px;
     }
+	.im-box h4 {
+		text-align: left;
+	}
 	table {
 		font-size: 14px;
 	}
 	[class*="col-"] {
 		margin-right: 0px;
 		float: left;
-		border: 1px solid #030202;
+		border: 1px solid #202122;
 		padding: 20px 12px;
 		text-align: center;
 		display: table-cell;
 		vertical-align: middle;
-		background-color: #2C2C2C;
+		background-color: #2e2f30;
 	}
 	.container {
-		margin-top: 110px;
+		margin-top: 130px;
 	}
-	.col-1-4-box {
-		padding: 15px 10px;
-		min-height: 110px;
-		max-height: 110px;
+	.im-box .container span {
+		float: left;
+	}
+	.im-box h4:first-child {
+		font-weight: normal;
+	}
+	.im-box #col-2-info,
+	.im-box #col-3-info {
+		font-size: 18px;
+		padding-top: 12px;
+	}
+	.col-1-4-box.im-box {
+		padding: 10px 10px;
+		min-height: 130px;
+		max-height: 130px;
+	}
+	.col-1-2-box.im-box {
+		padding: 10px 10px;
+		min-height: 130px;
+		max-height: 130px;
+		background-color: #323334;
+	}
+	.col-1-2-box.im-box #col-1-info {
+		font-size: 30px;
 	}
 	.detailed-results td.urlData {
 		max-width:700px;
+	}
+	.detailsTable {
+		margin: 0 30px 30px;
 	}
 }
 
@@ -365,14 +395,14 @@ td {
 	h3 {
 		 font-size: 15px;
 		 font-weight: 600;
-		 color: #656565;
+		 color: #ffffff;
 		 text-align: center;
 		 margin: 10px;
 	}
 	h4 {
 		font-size: 16px;
-		font-weight: 800;
-		color: #656565;
+
+		color: #ffffff;
 		text-align: center;
 		margin: 10px;
     }
@@ -384,6 +414,11 @@ td {
 	}
 	.col-1-4-box {
 		padding: 10px 5px;
+		min-height: 120px;
+		max-height: 120px;
+	}
+	.col-1-2-box {
+		padding: 10px 10px;
 		min-height: 120px;
 		max-height: 120px;
 	}
@@ -406,17 +441,22 @@ td {
 	[class*="col-"] {
 		margin-right: 0px;
 		float: left;
-		border: 1px solid #030202;
+		border: 1px solid #202122;
 		padding: 50px 25px;
 		text-align: center;
 		display: table-cell;
 		vertical-align: middle;
-		background-color: #2C2C2C;
+		background-color: #2e2f30;
 	}
 	.container {
 		margin-top: 150px;
 	}
 	.col-1-4-box {
+		padding: 5px;
+		min-height: 150px;
+		max-height: 150px;
+	}
+	.col-1-2-box {
 		padding: 5px;
 		min-height: 150px;
 		max-height: 150px;
@@ -475,9 +515,6 @@ td {
 }
 #block_container {
     text-align:center;
-}
-#bloc1, #bloc2,#col-1-2-info,#col-2-2-info,#col-1-3-info,#col-2-3-info {
-    display:inline;
 }
 #close {
     display:inline-block;
